--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#portfolios">
-                  School Projects
+                  
+			
+			Projects
                 </a>
               </li>
 		    <li class="nav-item">
@@ -268,7 +270,7 @@ I enjoy processing data to get useful information; sometimes I get lost in the d
     <section id="portfolios" class="section-padding">
       <!-- Container Starts -->
       <div class="container">        
-        <h2 class="section-title wow flipInX" data-wow-delay="0.4s">School Projects</h2>
+        <h2 class="section-title wow flipInX" data-wow-delay="0.4s">Projects</h2>
         <div class="row">          
           <div class="col-md-12">
             <!-- Portfolio Controller/Buttons -->
