--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ I enjoy processing data to get useful information; sometimes I get lost in the d
                   <img src="assets/img/gallery/img-4.png" alt=""/> 
                   <div class="overlay">
                     <div class="icons">
-                      <a class="lightbox preview" href="assets/img/gallery/img-4.jpg">
+                      <a class="lightbox preview" href="assets/img/gallery/img-4.png">
                         <i class="icon-eye"></i>
                       </a>
                       <a class="link" href="https://github.com/BouzidiImen/Social_media_Prediction_depression">
@@ -360,7 +360,7 @@ I enjoy processing data to get useful information; sometimes I get lost in the d
                   <img src="assets/img/gallery/img-5.png" alt=""/> 
                   <div class="overlay">
                     <div class="icons">
-                      <a class="lightbox preview" href="assets/img/gallery/img-5.jpg">
+                      <a class="lightbox preview" href="assets/img/gallery/img-5.png">
                         <i class="icon-eye"></i>
                       </a>
                       <a class="link" href="https://dhiadali.shinyapps.io/Municipal-Services/">
