--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                 </ul>
                 <div class="header-button wow fadeInUp" data-wow-delay="1s">
-                  <a href="https://github.com/BouzidiImen/BouzidiImenn/blob/master/assets/CV_Imen_Bouzidi.pdf" download="Resume-Imen-Bouzidi.pdf" class="btn btn-common">Download Resume</a>
+                  <a href="https://raw.githubusercontent.com/BouzidiImen/BouzidiImenn/master/assets/CV_Imen_Bouzidi.pdf" download="Resume-Imen-Bouzidi.pdf" class="btn btn-common">Download Resume</a>
                 </div>
 
               </div>
