--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hello!</h3>
               <p>		    
-		    I work at Creativ-Ceutical as a junior data analyst, altering pharmaceutical sector data.
-I received my bachelor's degree in statistics and data analysis from <a href="http://www.essai.rnu.tn/en/">the Higher School 
+		    I work at Creativ-Ceutical as a data scientist, altering pharmaceutical sector data.
+I received my engineer's degree in statistics and data analysis from <a href="http://www.essai.rnu.tn/en/">the Higher School 
 of Statistics and Data Analysis, University of Carthage Tunisia </a>.</p> <p> 
 
 I enjoy processing data to get useful information; sometimes I get lost in the data and forget about anything else.</p> <p>
@@ -171,7 +171,7 @@ I enjoy processing data to get useful information; sometimes I get lost in the d
               <div class="about-profile">
                 <ul class="admin-profile">
                   <li><span class="pro-title"> Name </span> <span class="pro-detail">Imen Bouzidi</span></li>
-                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">17 months</span></li>
+                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">20 months</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">Tunisia</span></li>
                   <li><span class="pro-title"> e-mail </span> <span class="pro-detail">Bouzidi.imen@outlook.com</span></li>
                   <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (216) 54 476 352</span></li>
@@ -232,7 +232,7 @@ I enjoy processing data to get useful information; sometimes I get lost in the d
                 </li>
 		      <li>
                   <div class="content-text">
-                    <h3 class="line-title">Junior Data Anlasyt at Creativ-Ceutical</h3>
+                    <h3 class="line-title">Data scientist at Creativ-Ceutical</h3>
                     <span> Sept 2020 - Present </span>
                     <p class="line-text"></p>
                   </div>
@@ -596,7 +596,7 @@ I enjoy processing data to get useful information; sometimes I get lost in the d
           <div class="col-md-12">
             <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
               
-              <p>Last Update Aug 2021 © Imen Bouzidi</p>
+              <p>Last Update Nov 2021 © Imen Bouzidi</p>
             </div>
           </div>
         </div>
