--- a/index.html
+++ b/index.html
@@ -254,28 +254,28 @@
                     <!-- service item -->
                     <div class="service-item padd-15">
                         <div class="service-item-inner" style="background: #FFFFFF;">
-                            <img src="assets/img/certf4.png" alt="">
+                            <img src="assets/img/certf4.PNG" alt="">
                              <a href="https://www.sololearn.com/Certificate/1068-9856630/jpg/" class="btn btn-default">See credential</a>
                         </div>
                     </div>
                     <!-- service item -->
                     <div class="service-item padd-15">
                         <div class="service-item-inner" style="background: #FFFFFF;">
-                            <img src="assets/img/certf2.png" alt="">
+                            <img src="assets/img/certf2.PNG" alt="">
                              <a href="https://www.coursera.org/account/accomplishments/certificate/926DEZ3V7NV8" class="btn btn-default">See credential</a>
                         </div>
                     </div>
                     <!-- service item -->
                      <div class="service-item padd-15">
                         <div class="service-item-inner" style="background: #FFFFFF;">
-                            <img src="assets/img/certf3.png" alt="">
+                            <img src="assets/img/certf3.PNG" alt="">
                              <a href="https://www.coursera.org/account/accomplishments/certificate/EEZK8XPNMJKN" class="btn btn-default">See credential</a>
                         </div>
                     </div>
 
                     <div class="service-item padd-15">
                         <div class="service-item-inner" style="background: #FFFFFF;">
-                            <img src="assets/img/certf1.png" alt="">
+                            <img src="assets/img/certf1.PNG" alt="">
                             <a href="https://courses.edx.org/certificates/3cc763ab22944c1fad3baf31563b80e4" class="btn btn-default">See credential</a>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                     <div class="portfolio-item padd-15" data-category="Python">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
-                                <img src="assets/img/proj1.png" alt="">
+                                <img src="assets/img/proj1.PNG" alt="">
                                 <div class="mask"></div>
                             </div>
                             <span class="term">Web-scraping, Deep Learning</span>
@@ -343,7 +343,7 @@
                      <div class="portfolio-item padd-15" data-category="R">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
-                                <img src="assets/img/proj2.png" alt="">
+                                <img src="assets/img/proj2.PNG" alt="">
                                 <div class="mask"></div>
                             </div>
                             <span class="term">Clustering, Dashboard, R Package</span>
@@ -355,7 +355,7 @@
                      <div class="portfolio-item padd-15" data-category="R">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
-                                <img src="assets/img/proj3.png" alt="">
+                                <img src="assets/img/proj3.PNG" alt="">
                                 <div class="mask"></div>
                             </div>
                             <span class="term">Time series, Dashboard</span>
@@ -367,7 +367,7 @@
                      <div class="portfolio-item padd-15" data-category="R">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
-                                <img src="assets/img/proj4.png" alt="">
+                                <img src="assets/img/proj4.PNG" alt="">
                                 <div class="mask"></div>
                             </div>
                             <span class="term">Survey, Dashboard, Analysis</span>
@@ -379,7 +379,7 @@
                      <div class="portfolio-item padd-15" data-category="Python">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
-                                <img src="assets/img/proj5.png" alt="">
+                                <img src="assets/img/proj5.PNG" alt="">
                                 <div class="mask"></div>
                             </div>
                             <span class="term">Deep Learning, French, Dashboard</span>
@@ -392,7 +392,7 @@
                      <div class="portfolio-item padd-15" data-category="Python">
                         <div class="portfolio-item-inner">
                             <div class="portfolio-item-thumbnail">
-                                <img src="assets/img/proj6.png" alt="">
+                                <img src="assets/img/proj6.PNG" alt="">
                                 <div class="mask"></div>
                             </div>
                             <span class="term">Deep Learning, French, Dashboard</span>
