--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                         <h3 class="timeline-date">
                                             <i class="lni lni-calendar"></i> Jan 2022 - Present
                                         </h3> 
-                                        <h3 class="timeline-title">Data scientist at Polygone</h3>
+                                        <h3 class="timeline-title">Data scientist at Asqii</h3>
                                         <p class="timeline-text">Working on  Speech to text and OCR for the development of health care in Tunisia.</p>
                                     </div>
                                     <!-- timeline item -->
