--- a/index.html
+++ b/index.html
@@ -266,7 +266,14 @@
                              <a href="https://www.credly.com/badges/3b593b9b-638b-4741-8ad8-d4d308177826/public_url" class="btn btn-default">See credential</a>
                         </div>
                     </div>
-                    
+
+                    <!-- service item -->
+                    <div class="service-item padd-15">
+                        <div class="service-item-inner" style="background: #FFFFFF;">
+                            <img src="assets/img/certf6.PNG" alt="">
+                        </div>
+                    </div>
+                    <!-- service item -->
                     <!-- service item -->
                     <div class="service-item padd-15">
                         <div class="service-item-inner" style="background: #FFFFFF;">
