--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <img src="assets/img/image.png" alt="Imen">
                     <!-- info -->
                     <h1>Imen Bouzidi</h1>
-                    <span>I'm a <span class="info-text">Statistician and Data Scientist &#128540;</span></span>
+                    <span>I'm a <span class="info-text">Engineer in Statistics and Data Analysis &#128540;</span></span>
                     <!-- social icons -->
                     <ul class="social-icons">
                         <li><a href="https://www.linkedin.com/in/imen-bouzidi-970643162/"><i class="lni lni-linkedin"></i></a></li>
