--- a/index.html
+++ b/index.html
@@ -193,7 +193,16 @@
                                      <div class="timeline-item">
                                         <i class="lni lni-briefcase timeline-icon"></i>
                                         <h3 class="timeline-date">
-                                            <i class="lni lni-calendar"></i> Jan 2022 - Present
+                                            <i class="lni lni-calendar"></i> May 2022 - Present
+                                        </h3> 
+                                        <h3 class="timeline-title">Data Analytics Intern</h3>
+                                        <p class="timeline-text">As a member of Africa Data Acceleration Squad working on establishing a solid data movement across Roche Africa as well as build the foundation for successful integrated PHC solutions.</p>
+                                    </div>
+                                    <!-- timeline item -->
+                                     <div class="timeline-item">
+                                        <i class="lni lni-briefcase timeline-icon"></i>
+                                        <h3 class="timeline-date">
+                                            <i class="lni lni-calendar"></i> Jan 2022 - April 2022
                                         </h3> 
                                         <h3 class="timeline-title">Data scientist at Asqii</h3>
                                         <p class="timeline-text">Working on  Speech to text and OCR for the development of health care in Tunisia.</p>
