--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                         <h3 class="timeline-date">
                                             <i class="lni lni-calendar"></i> May 2022 - Present
                                         </h3> 
-                                        <h3 class="timeline-title">Data Analytics Intern</h3>
+                                        <h3 class="timeline-title">Data Analytics Intern at Roche</h3>
                                         <p class="timeline-text">As a member of Africa Data Acceleration Squad working on establishing a solid data movement across Roche Africa as well as build the foundation for successful integrated PHC solutions.</p>
                                     </div>
                                     <!-- timeline item -->
