--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <img src="assets/img/image.png" alt="Imen">
                     <!-- info -->
                     <h1>Imen Bouzidi</h1>
-                    <span>I'm an <span class="info-text">Engineer in Statistics and Data Analysis &#128540;</span></span>
+                    <span>I am an <span class="info-text">Engineer in Statistics and Data Analysis &#128540;</span></span>
                     <!-- social icons -->
                     <ul class="social-icons">
                         <li><a href="https://www.linkedin.com/in/imen-bouzidi-970643162/"><i class="lni lni-linkedin"></i></a></li>
@@ -102,7 +102,7 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <!-- about text -->
-                                    <p>I am an enthusiastic data scientist thriving to make a difference. I strongly believe in the saying "If you can imagine it, you can achieve it." I have a rich experience in data analysis, statistics and deep learning. .</p>
+                                    <p>As a passionate data scientist, I aim to make a positive impact. My philosophy is "Where there's a will, there's a way". I have a rich experience in data analysis, statistics and deep learning. .</p>
                                     <div>
                                         <a href="https://raw.githubusercontent.com/BouzidiImen/BouzidiImenn/master/assets/CV_Imen_Bouzidi.pdf" class="btn btn-default">Download CV</a>
                                     </div>
@@ -127,7 +127,7 @@
                                         </div>
                                         <!-- skill item -->
                                         <div class="skill-item">
-                                            <h4>Developement</h4>
+                                            <h4>Programming</h4>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 80%; background: #4e97c0;"></div>
                                                 <div class="skill-percent">80%</div>
@@ -196,7 +196,7 @@
                                             <i class="lni lni-calendar"></i> May 2022 - Present
                                         </h3> 
                                         <h3 class="timeline-title">Data Analytics Intern at Roche</h3>
-                                        <p class="timeline-text">As a member of Africa Data Acceleration Squad working on establishing a solid data movement across Roche Africa as well as build the foundation for successful integrated PHC solutions.</p>
+                                        <p class="timeline-text">As a member of Africa Data Acceleration Squad working on establishing a solid data movement across Africa as well as build the foundation for successful integrated PHC solutions.</p>
                                     </div>
                                     <!-- timeline item -->
                                      <div class="timeline-item">
@@ -205,7 +205,7 @@
                                             <i class="lni lni-calendar"></i> Jan 2022 - April 2022
                                         </h3> 
                                         <h3 class="timeline-title">Data scientist at Asqii</h3>
-                                        <p class="timeline-text">Working on  Speech to text and OCR for the development of health care in Tunisia.</p>
+                                        <p class="timeline-text">developed Speech to text and OCR models to digitize health care records in Tunisia.</p>
                                     </div>
                                     <!-- timeline item -->
                                     <div class="timeline-item">
@@ -213,7 +213,7 @@
                                         <h3 class="timeline-date">
                                             <i class="lni lni-calendar"></i> Sep 2020 - Dec 2021
                                         </h3>
-                                        <h3 class="timeline-title">Data scientist at Creativ-Ceutical </h3>
+                                        <h3 class="timeline-title">Statistician and Data Analyst at Creativ-Ceutical </h3>
                                         <p class="timeline-text">Develop R functions/ SAS macros to automate internal tasks. Conduct internal trainings</p>
                                     </div>
                                      <!-- timeline item -->
