--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                             <i class="lni lni-calendar"></i> Jan 2022 - April 2022
                                         </h3> 
                                         <h3 class="timeline-title">Data scientist at Asqii</h3>
-                                        <p class="timeline-text">developed Speech to text and OCR models to digitize health care records in Tunisia.</p>
+                                        <p class="timeline-text">Developed Speech to text and OCR models to digitize health care records in Tunisia.</p>
                                     </div>
                                     <!-- timeline item -->
                                     <div class="timeline-item">
